fix: align home page filter box to the middle of the page

--- a/doorway-ui-components/src/headers/DoorwayHero.scss
+++ b/doorway-ui-components/src/headers/DoorwayHero.scss
@@ -44,10 +44,6 @@
     @apply p-12;
     @apply rounded-3xl;
   }
-
-  @media (min-width: $screen-lg) {
-    left: var(--doorway-hero-inner-offset);
-  }
 }
 
 .doorway-hero_inner {
